--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ install(FILES ${PROJECT_SOURCE_DIR}/rock/roby_plugin.rb
         DESTINATION ${CMAKE_INSTALL_PREFIX}/share/orogen/plugins/roby
         RENAME transformer_plugin.rb)
 
+include($ENV{ROCK_CMAKE_MACROS}/RockRuby.cmake)
+# Install a transformer/runtime file, which will be loaded by orocos.rb whenever
+# it loads an oroGen model that has a transformer extension
+rock_ruby_library(transformer rock/transformer/runtime.rb)
 
 # FIND_PACKAGE(KDL)
 # FIND_PACKAGE(OCL)
